# snapshot-server

./: .editorconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md  package.json
core/: CMakeLists.txt  main.cpp
server/: package.json
server/src/: main.ts
squash/: CMakeLists.txt  main.cpp
src/core/: CMakeLists.txt  main.cpp
src/server/: main.ts
tool/preparation/mod/: build.gradle
tool/preparation/mod/src/main/java/com/github/giji34/worldgen/: GenerateTask.java  InspectionTask.java  Loc.java  LocationIterator.java  Main.java  SparseBlockRange2D.java  SparseIntRange.java  SpiralPixelVisitor.java  Task.java  Throttle.java  WorldGenTask.java  WorldGenerateTask.java
tool/preparation/mod/src/test/java/com/github/giji34/worldgen_test/: SparseIntRangeTest.java
tool/preparation/validator/: CMakeLists.txt  main.cpp
tool/preparation/validator/src/: main.cpp
